--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Transformers
+pTransformers
 Transformers[sentencepiece]
 datasets
-sacreblue
+sacrebleu
 rouge_score
 py7zr
 pandas
@@ -14,8 +14,8 @@ notebook
 boto3
 mypy-boto3-s3
 python-box == 6.0.2
-ensure = 1.0.2
-fastapi =0.78.0
-unicorn = 0.18.3
-jinja2 =3.1.2
+ensure == 1.0.2
+fastapi == 0.78.0
+unicorn == 2.0.1.post1
+jinja2 == 3.1.2
 -e .
