--- a/config/config.yaml
+++ b/config/config.yaml
@@ -6,3 +6,11 @@ data_ingestion:
   local_data_file: artifacts/data_ingestion/archive%20(2).zip
   unzip_dir: artifacts/data_ingestion
 
+
+data_validation:
+  enabled: true
+  root_dir: artifacts/data_validation
+  STATUS_FILE: artifacts/data_validation/status.txt
+  ALL_REQUIRED_FILES: ["train", "test", "validation"]
+
+
